--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -21,12 +21,16 @@
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>    
+      </li>
+      <li class="nav-item" *ngFor="let opcion of options">
+        <a class="nav-link" href="{{ opcion.url }}">{{ opcion.title }}</a>
+      </li>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      <input type="text" name="searchString" [(ngModel)]="searchString" class="form-control mr-sm-2" placeholder="Search" aria-label="Search"/>
+      <button class="btn btn-secondary my-2 my-sm-0" (click)="realizarBusqueda()">Search</button>     
     </form>
   </div>
-  {{ options }}
+  
 </nav>
