Uso de las directivas *ngIf y evento Click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,13 @@
   <div class="starter-template">
     <h1>{{ title }}</h1>
     <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-
-  <div class="starter-template">
-    <h1>{{ title }}</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-
-  <div class="starter-template">
-    <h1>{{ title }}</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-
-  <div class="starter-template">
-    <h1>{{ title }}</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-
-  <div class="starter-template">
-    <h1>{{ title }}</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-
-  <div class="starter-template">
-    <h1>{{ title }}</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+  </div>  
+  <div class="row">
+    <div class="col-md-4">
+        <comp01></comp01>
+    </div>
+    <div class="col-md-auto">
+        col 8
+    </div>
   </div>
 </main>
