--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -28,7 +28,7 @@
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input type="text" name="searchString" [(ngModel)]="searchString" class="form-control mr-sm-2" placeholder="Search" aria-label="Search"/>
+      <input type="text" name="searchString" autocomplete="off" [(ngModel)]="searchString" class="form-control mr-sm-2" placeholder="Search" aria-label="Search"/>
       <button class="btn btn-secondary my-2 my-sm-0" (click)="realizarBusqueda()">Search</button>     
     </form>
   </div>
